# TenderIQ

./: .gitignore  MANIFEST.in  README.md  apps.json  license.txt  pyproject.toml  requirements.txt  setup.py
tenderiq/: hooks.py  modules.txt  patches.txt
tenderiq/tenderiq/api/: __init__.py
tenderiq/tenderiq/calendar/: __init__.py  deadlines.py  digest.py
tenderiq/tenderiq/doctype/bid_team/: bid_team.json  bid_team.py
tenderiq/tenderiq/doctype/bid_team_member/: bid_team_member.json  bid_team_member.py
tenderiq/tenderiq/doctype/compliance_clause/: compliance_clause.json  compliance_clause.py
tenderiq/tenderiq/doctype/pricing_sheet/: pricing_sheet.json  pricing_sheet.py
tenderiq/tenderiq/doctype/pricing_sheet_line/: pricing_sheet_line.json  pricing_sheet_line.py
tenderiq/tenderiq/doctype/submission_record/: submission_record.json  submission_record.py
tenderiq/tenderiq/doctype/tender/: tender.json  tender.py
tenderiq/tenderiq/doctype/tender_checklist/: tender_checklist.json  tender_checklist.py
tenderiq/tenderiq/doctype/tender_checklist_item/: tender_checklist_item.json  tender_checklist_item.py
tenderiq/tenderiq/doctype/tender_document/: tender_document.json  tender_document.py
tenderiq/tenderiq/doctype/tenderiq_settings/: tenderiq_settings.json  tenderiq_settings.py
tenderiq/tenderiq/integrations/: __init__.py
tenderiq/tenderiq/scrapers/: __init__.py  runner.py
